// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Works when it has only passing tests 1`] = `
"PASS integrationTests/__fixtures__/passing/__mocha__/__tests__/file.test.js
  ✓ This test passes
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:
Ran all test suites.
"
`;

exports[`Works when it has only passing tests and --coverage 1`] = `
"PASS integrationTests/__fixtures__/passing/__mocha__/__tests__/file.test.js
  ✓ This test passes
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:
Ran all test suites.
--------------|----------|----------|----------|----------|----------------|
File          |  % Stmts | % Branch |  % Funcs |  % Lines |Uncovered Lines |
--------------|----------|----------|----------|----------|----------------|
All files     |      100 |      100 |      100 |      100 |                |
 file.test.js |      100 |      100 |      100 |      100 |                |
--------------|----------|----------|----------|----------|----------------|"
`;
